Mon Mar 21 20:56:43 MST 2005 John Fleck (jfleck@inkstain.net)

	* doc/xsltproc.xml, xsltproc.html, xsltproc.1
	update documentation to reflect addition of --nodtdattr
	command line flag. Bug #171098

Wed Mar 16 17:19:24 HKT 2005 William Brack (wbrack@mmm.com.hk)

	* libxslt/xslt.c: fixed problem with text node on stylesheet
	  document without a dictionary (bug 170533)

Sun Mar 13 20:08:34 CET 2005 Daniel Veillard <daniel@veillard.com>

	* NEWS configure.in doc/*: preparing 1.1.13, updated and rebuilt
	  the docs.
	* tests/plugins/Makefile.am xsltproc/Makefile.am: trying to fix
	  some build problems.
	* libxslt.spec.in: adding a build require and a require for 
	  libgcrypt-devel, c.f. Red Hat bug #133211
	* libxslt/xsltInternals.h: as for libxml2, XML_CAST_FPTR was wrong.

Wed Feb 23 19:25:13 HKT 2005 William Brack <wbrack@mmm.com.hk>

	* libxslt/pattern.c: fixed a problem with '//' and
	  namespaces (bug 168208)

Mon Feb 14 23:10:21 HKT 2005 William Brack <wbrack@mmm.com.hk>

	* libxslt/namespaces.c: fixed a problem with
	  exclude-result-prefixes (bug 165560)

Mon Feb 14 12:51:07 CET 2005 Daniel Veillard <daniel@veillard.com>

	* libxslt/variables.c: added a cretion of ctxt->globalVars in
	  xsltProcessUserParamInternal if missing.

Wed Feb  9 21:58:56 CET 2005 Daniel Veillard <daniel@veillard.com>

	* doc/Makefile.am doc/libxslt-api.xml doc/libxslt-refs.xml 
	  doc/EXSLT/libexslt-api.xml: applied patch for make wiki from
	  Joel Reed and rebuild
	* tests/plugins/Makefile.am: fix from Joel Reed for make dist

Sun Jan 30 20:01:21 CET 2005 Daniel Veillard <daniel@veillard.com>

	* tests/plugins/testplugin.c win32/Makefile.msvc win32/configure.js:
	  applied plugin patch for Windows by Joel Reed

Fri Jan 28 01:00:56 CET 2005 Daniel Veillard <daniel@veillard.com>

	* win32/configure.js: Makefile fixes for Widows from Joel Reed

Sat Jan 22 22:14:26 CET 2005 Daniel Veillard <daniel@veillard.com>

	* libxslt/pattern.c libxslt/preproc.c libxslt/templates.c