@@ -54,7 +54,7 @@ Output each step taken by xsltproc in processing the stylesheet and the document
 
 .TP
 \fB\-o\fR or \fB\-\-output\fR \fIfile\fR
-Direct output to the file named \fIfile\fR\&. For multiple outputs, also known as "chunking", \fB\-o\fR \fBdirectory/\fR directs the output files to a specified directory\&. The directory must already exist\&.
+Direct output to the file named \fIfile\fR\&. For multiple outputs, also known as "chunking", \fB\-o\fR  \fBdirectory/\fR directs the output files to a specified directory\&. The directory must already exist\&.
 
 .TP
 \fB\-\-timing\fR
@@ -110,7 +110,7 @@ Use the SGML catalog specified in \fBSGML_CATALOG_FILES\fR to resolve the locati
 
 .TP
 \fB\-\-xinclude\fR
-Process the input document using the Xinclude specification\&. More details on this can be found in the Xinclude specification: http://www\&.w3\&.org/TR/xinclude/: \fIhttp://www.w3.org/TR/xinclude/\fR
+Process the input document using the Xinclude specification\&. More details on this can be found in the Xinclude specification: http://www\&.w3\&.org/TR/xinclude/: \fIhttp://www.w3.org/TR/xinclude/\fR 
 
 .TP
 \fB\-\-profile\fR or \fB\-\-norman\fR
